# ascension

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  readme.md
.github/workflows/: test_backend.yml  test_server.yml
backend/: Dockerfile  alembic.ini  crud.py  initial_data.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025-05-09_initialize_models.py  9519f4e58042_initialize_models.py
backend/api/: depends.py
backend/api/routes/: login.py
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2025-05-09_initialize_models.py
backend/app/api/: depends.py  main.py
backend/app/api/routes/: login.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: conftest.py  test_crud.py  utils.py
backend/app/tests/api/routes/: test_login.py
backend/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py  test_crud.py  utils.py
backend/tests/api/routes/: test_login.py
client/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/: Dockerfile  package-lock.json  package.json
server/: Dockerfile  crud.py  main.py  models.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 66b2bde1b7ba_username_no_longer_optional.py
server/api/: depends.py  main.py
server/api/routes/: login.py
server/core/: config.py  db.py  security.py
server/scripts/: prestart.sh
server/tests/: conftest.py  utils.py
server/tests/api/routes/: test_login.py
(+14 files in other folders)
